# audiodecoder.dsd

./: CMakeLists.txt
audiodecoder.dsd/: addon.xml  addon.xml.in
src/: ByteOrder.hxx  DSDCodec.cpp  DSDiffParser.cpp  DSDiffParser.h  DSFParser.cpp  DSFParser.h  bit_reverse.h  dsd2pcm.h  dsd2pcm.hpp
